# pCompiler

./: LICENSE  README.md  config.json  pyproject.toml
.github/workflows/: test.yml
docs/: cicd.md  cli.md  cost_estimation.md  dsl.md  evals.md  packaging.md  plugins.md
examples/: advanced_templating.yaml  classify_feedback.yaml  context_demo_output.txt  context_engineering_demo.yaml  demo_output.json  evals_demo.yaml  extract_invoice.yaml  local_knowledge.txt  output_claude.json  output_gemini.json  summarize_contract.yaml
pcompiler/: __init__.py  cli.py  compiler.py  context_manager.py  templates.py
pcompiler/analysis/: __init__.py  ambiguity.py  contradiction.py  cost_estimator.py  injection.py  pricing_updater.py  schema_validator.py
pcompiler/dsl/: __init__.py  examples.py  generator.py  parser.py  schema.py
pcompiler/evals/: judge.py  metrics.py  models.py  runner.py
pcompiler/ir/: __init__.py  nodes.py
pcompiler/models/: registry.py
pcompiler/observability/: __init__.py  tracer.py  versioning.py
pcompiler/optimizer/: __init__.py  cache.py  compress.py  cot.py  reorder.py
pcompiler/plugins/: __init__.py  anthropic_plugin.py  base.py  context.py  google_plugin.py  mistral_plugin.py  openai_plugin.py
pcompiler/security/: __init__.py  policies.py  sanitizer.py
tests/: test_analysis.py  test_cli.py  test_compiler.py  test_context.py  test_cost_estimator.py  test_evals.py  test_optimizer.py  test_parser.py  test_plugins.py  test_security.py  test_templates.py
